# oyku_description

./: CMakeLists.txt  package.xml
config/: urdf_visualisation.rviz
launch/: test_robot_urdf.launch
urdf/: oyku_model.xacro
